namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: snapp
  labels:
    name: snapp
