service.yml
apiVersion: v1
kind: Service
metadata:
 name: nodeport-service
spec:
 type: NodePort 
 ports:
  - port: 80
    targetPort: 3000 
    nodePort: 30150
 selector:
    app: calculator
